<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_main_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Simple List App"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/text_main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/text_main_greeting"
        app:layout_constraintStart_toStartOf="@+id/text_main_greeting"
        app:layout_constraintTop_toBottomOf="@+id/text_main_greeting" />

    <EditText
        android:id="@+id/text_main_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/text_main_title"
        app:layout_constraintStart_toStartOf="@+id/text_main_title"
        app:layout_constraintTop_toBottomOf="@+id/text_main_title" />

    <Button
        android:id="@+id/button_main_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="Add"
        app:layout_constraintEnd_toEndOf="@+id/text_main_description"
        app:layout_constraintTop_toBottomOf="@+id/text_main_description" />

</android.support.constraint.ConstraintLayout>